<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Glossy_Grape"
    tools:context=".ShopActivity">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:translationY="80dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnFireEgg"
            android:tag = "200"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:width="0dp"
            android:background="?android:selectableItemBackground"
            android:padding="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/fireegg_copy"
            android:contentDescription="@string/fire_egg"></ImageButton>

        <ImageButton
            android:id="@+id/btnWaterEgg"
            android:tag = "200"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:width="0dp"
            android:background="?android:selectableItemBackground"
            android:padding="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/wateregg_copy"
            android:contentDescription="@string/water_egg"></ImageButton>


        <ImageButton
            android:id="@+id/btnEarthEgg"
            android:tag = "200"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:width="0dp"
            android:background="?android:selectableItemBackground"
            android:padding="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/earthegg_copy"
            android:contentDescription="@string/earth_egg"></ImageButton>

        <ImageButton
            android:id="@+id/btnLightningEgg"
            android:tag = "200"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:width="0dp"
            android:background="?android:selectableItemBackground"
            android:padding="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/lightningegg_copy"
            android:contentDescription="@string/lightning_egg"></ImageButton>

        <ImageButton
            android:id="@+id/btnFive"
            android:tag = "200"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:width="0dp"
            android:background="?android:selectableItemBackground"
            android:padding="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/windegg_copy"
            android:contentDescription="@string/wind_egg"></ImageButton>

        <ImageButton
            android:id="@+id/btnSix"
            android:tag = "200"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:width="0dp"
            android:background="?android:selectableItemBackground"
            android:padding="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/shadowegg_copy"
            android:contentDescription="@string/shadow_egg"></ImageButton>

        <ImageButton
            android:layout_width="0dp"
            android:tag = "200"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:width="0dp"
            android:background="?android:selectableItemBackground"
            android:padding="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/plasmaegg_copy"
            android:contentDescription="@string/plasma_egg"></ImageButton>

        <ImageButton
            android:id="@+id/btnEight"
            android:tag = "200"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:width="0dp"
            android:background="?android:selectableItemBackground"
            android:padding="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/lightegg_copy"
            android:contentDescription="@string/light_egg"></ImageButton>

    </GridLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="176dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/egg_shop"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/coinsText"
        android:layout_width="53dp"
        android:layout_height="26dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="24sp"
        android:gravity="center"
        android:text="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/OutcomeText"
        android:layout_width="85dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>