<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Glossy_Grape"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button_rewardedAd"
        android:layout_width="117dp"
        android:layout_height="56dp"
        android:layout_marginEnd="20dp"
        android:text="@string/rewarded_ad"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/button_no"
        app:layout_constraintTop_toBottomOf="@+id/textView_reward"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_no"
        android:layout_width="117dp"
        android:layout_height="56dp"
        android:layout_marginEnd="84dp"
        android:text="@string/no"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_reward"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_incubate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:text="@string/incubate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_incubate"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_giveup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="@string/give_up"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/button_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/seekBar_timerValue"
        android:layout_width="328dp"
        android:layout_height="67dp"
        android:layout_marginTop="440dp"
        app:layout_constraintBottom_toTopOf="@+id/textView_countdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_reward"
        android:layout_width="318dp"
        android:layout_height="70dp"
        android:layout_marginTop="216dp"
        android:gravity="center"
        android:text="@string/do_you_want_to_double_your_coins"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView_countdown"
        android:layout_width="127dp"
        android:layout_height="44dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/textview"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_incubate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_userCoins"
        android:layout_width="107dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical|end"
        android:text="@string/coins"
        android:textSize="30sp"
        app:autoSizeMaxTextSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Shop coming soon!"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_tempCoinAdder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Coins"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/textView_userCoins"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toEndOf="@+id/button_shop"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnEggPicker"
        android:layout_width="174dp"
        android:layout_height="350dp"
        android:scaleType="fitCenter"
        android:background="?android:selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372"
        app:srcCompat="@drawable/earthegg_copy" />

</androidx.constraintlayout.widget.ConstraintLayout>